[gd_scene load_steps=2 format=3 uid="uid://bvq8xj3ywxm7k"]

[ext_resource type="Script" path="res://addons/ikea_api/ikea_browser_dock.gd" id="1_1"]

[node name="IkeaBrowserDock" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "IKEA Product Browser"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="SearchContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SearchInput" type="LineEdit" parent="SearchContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search products..."

[node name="SearchButton" type="Button" parent="SearchContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Search"

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
